добавила приоритет задач и контроль времени