@@ -7,16 +7,21 @@ import tasks.Task;
 import tasks.TaskStatus;
 import tasks.TaskType;
 
+import java.time.Duration;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Objects;
+import java.util.TreeSet;
 
 public class InMemoryTaskManager implements TaskManager {
     protected final HashMap<Integer, Task> tasks;
     protected final HashMap<Integer, Epic> epics;
     protected final HashMap<Integer, Subtask> subtasks;
     protected final HistoryManager historyManager;
+    protected final TreeSet<Task> prioritizedTasks;
     protected int idCounter = 0;
 
     public InMemoryTaskManager() {
@@ -24,6 +29,8 @@ public class InMemoryTaskManager implements TaskManager {
         this.epics = new HashMap<>();
         this.subtasks = new HashMap<>();
         this.historyManager = Managers.getDefaultHistory();
+        this.prioritizedTasks = new TreeSet<>(Comparator.comparing(Task::getStartTime)
+                .thenComparing(Task::getId));
     }
 
     @Override
@@ -33,36 +40,42 @@ public class InMemoryTaskManager implements TaskManager {
 
     @Override
     public List<Task> getAllTasks() {
-        List<Task> result = new ArrayList<>();
-        for (Task task : tasks.values()) {
-            result.add(copyTask(task));
-        }
-        return result;
+        return tasks.values()
+                .stream()
+                .map(this::copyTask)
+                .toList();
     }
 
     @Override
     public List<Epic> getAllEpics() {
-        List<Epic> result = new ArrayList<>();
-        for (Epic epic : epics.values()) {
-            result.add(copyEpic(epic));
-        }
-        return result;
+        return epics.values()
+                .stream()
+                .map(this::copyEpic)
+                .toList();
     }
 
     @Override
     public List<Subtask> getAllSubtasks() {
-        List<Subtask> result = new ArrayList<>();
-        for (Subtask subtask : subtasks.values()) {
-            result.add(copySubtask(subtask));
-        }
-        return result;
+        return subtasks.values()
+                .stream()
+                .map(this::copySubtask)
+                .toList();
+    }
+
+    @Override
+    public List<Task> getPrioritizedTasks() {
+        return prioritizedTasks.stream()
+                .map(this::copyTaskByType)
+                .toList();
     }
 
     @Override
     public void deleteAllTasks() {
-        for (Integer taskId : new ArrayList<>(tasks.keySet())) {
-            historyManager.remove(taskId);
+        for (Task task : tasks.values()) {
+            removeFromPrioritizedTasks(task);
+            historyManager.remove(task.getId());
         }
+
         tasks.clear();
     }
 
@@ -71,22 +84,26 @@ public class InMemoryTaskManager implements TaskManager {
         for (Integer epicId : new ArrayList<>(epics.keySet())) {
             historyManager.remove(epicId);
         }
-        for (Integer subtaskId : new ArrayList<>(subtasks.keySet())) {
-            historyManager.remove(subtaskId);
+        for (Subtask subtask : subtasks.values()) {
+            removeFromPrioritizedTasks(subtask);
+            historyManager.remove(subtask.getId());
         }
+
         epics.clear();
         subtasks.clear();
     }
 
     @Override
     public void deleteAllSubtasks() {
-        for (Integer subtaskId : new ArrayList<>(subtasks.keySet())) {
-            historyManager.remove(subtaskId);
+        for (Subtask subtask : subtasks.values()) {
+            removeFromPrioritizedTasks(subtask);
+            historyManager.remove(subtask.getId());
         }
+
         subtasks.clear();
         for (Epic epic : epics.values()) {
             epic.clearSubtaskIds();
-            updateEpicStatus(epic.getId());
+            updateEpicFields(epic.getId());
         }
     }
 
@@ -153,8 +170,11 @@ public class InMemoryTaskManager implements TaskManager {
         }
 
         int newId = generateId();
-        Task taskToSave = new Task(newId, task.getTitle(), task.getDescription(), task.getStatus(), TaskType.TASK);
+        Task taskToSave = new Task(newId, task.getTitle(), task.getDescription(), task.getStatus(), TaskType.TASK,
+                task.getDuration(), task.getStartTime());
+        checkIntersection(taskToSave);
         tasks.put(newId, taskToSave);
+        addToPrioritizedTasks(taskToSave);
         return newId;
     }
 
@@ -167,6 +187,7 @@ public class InMemoryTaskManager implements TaskManager {
         int newId = generateId();
         Epic epicToSave = new Epic(newId, epic.getTitle(), epic.getDescription(), TaskStatus.NEW);
         epics.put(newId, epicToSave);
+        updateEpicFields(newId);
         return newId;
     }
 
@@ -186,11 +207,13 @@ public class InMemoryTaskManager implements TaskManager {
             newId = generateId();
         }
 
-        Subtask subtaskToSave = new Subtask(newId, subtask.getTitle(), subtask.getDescription(), subtask.getStatus(),
-                subtask.getEpicId());
+        Subtask subtaskToSave = new Subtask(newId, subtask.getTitle(), subtask.getDescription(),
+                subtask.getStatus(), subtask.getEpicId(), subtask.getDuration(), subtask.getStartTime());
+        checkIntersection(subtaskToSave);
         subtasks.put(newId, subtaskToSave);
         epic.addSubtaskId(newId);
-        updateEpicStatus(epic.getId());
+        addToPrioritizedTasks(subtaskToSave);
+        updateEpicFields(epic.getId());
         return newId;
     }
 
@@ -202,9 +225,12 @@ public class InMemoryTaskManager implements TaskManager {
 
         Task existingTask = tasks.get(task.getId());
         if (existingTask != null && existingTask.getType() == task.getType()) {
-            existingTask.setTitle(task.getTitle());
-            existingTask.setDescription(task.getDescription());
-            existingTask.setStatus(task.getStatus());
+            Task updatedTask = new Task(task.getId(), task.getTitle(), task.getDescription(), task.getStatus(),
+                    TaskType.TASK, task.getDuration(), task.getStartTime());
+            checkIntersection(updatedTask);
+            removeFromPrioritizedTasks(existingTask);
+            tasks.put(task.getId(), updatedTask);
+            addToPrioritizedTasks(updatedTask);
         }
     }
 
@@ -218,6 +244,7 @@ public class InMemoryTaskManager implements TaskManager {
         if (existingEpic != null) {
             existingEpic.setTitle(epic.getTitle());
             existingEpic.setDescription(epic.getDescription());
+            updateEpicFields(existingEpic.getId());
         }
     }
 
@@ -229,17 +256,23 @@ public class InMemoryTaskManager implements TaskManager {
 
         Subtask existingSubtask = subtasks.get(subtask.getId());
         if (existingSubtask != null && existingSubtask.getEpicId() == subtask.getEpicId()) {
-            existingSubtask.setTitle(subtask.getTitle());
-            existingSubtask.setDescription(subtask.getDescription());
-            existingSubtask.setStatus(subtask.getStatus());
-            updateEpicStatus(subtask.getEpicId());
+            Subtask updatedSubtask = new Subtask(subtask.getId(), subtask.getTitle(), subtask.getDescription(),
+                    subtask.getStatus(), subtask.getEpicId(), subtask.getDuration(), subtask.getStartTime());
+            checkIntersection(updatedSubtask);
+            removeFromPrioritizedTasks(existingSubtask);
+            subtasks.put(subtask.getId(), updatedSubtask);
+            addToPrioritizedTasks(updatedSubtask);
+            updateEpicFields(subtask.getEpicId());
         }
     }
 
     @Override
     public void deleteTask(int id) {
-        tasks.remove(id);
-        historyManager.remove(id);
+        Task task = tasks.remove(id);
+        if (task != null) {
+            removeFromPrioritizedTasks(task);
+            historyManager.remove(id);
+        }
     }
 
     @Override
@@ -248,7 +281,8 @@ public class InMemoryTaskManager implements TaskManager {
         if (epic != null) {
             historyManager.remove(id);
             for (Integer subtaskId : epic.getSubtaskIds()) {
-                subtasks.remove(subtaskId);
+                Subtask subtask = subtasks.remove(subtaskId);
+                removeFromPrioritizedTasks(subtask);
                 historyManager.remove(subtaskId);
             }
         }
@@ -258,11 +292,12 @@ public class InMemoryTaskManager implements TaskManager {
     public void deleteSubtask(int id) {
         Subtask subtask = subtasks.remove(id);
         if (subtask != null) {
+            removeFromPrioritizedTasks(subtask);
             historyManager.remove(id);
             Epic epic = epics.get(subtask.getEpicId());
             if (epic != null) {
                 epic.removeSubtaskId(id);
-                updateEpicStatus(epic.getId());
+                updateEpicFields(epic.getId());
             }
         }
     }
@@ -271,21 +306,21 @@ public class InMemoryTaskManager implements TaskManager {
     public List<Subtask> getEpicSubtasks(int epicId) {
         Epic epic = epics.get(epicId);
         if (epic == null) {
-            return Collections.emptyList();
+            return List.of();
         }
 
-        List<Subtask> result = new ArrayList<>();
-        for (Integer subtaskId : epic.getSubtaskIds()) {
-            Subtask subtask = subtasks.get(subtaskId);
-            if (subtask != null) {
-                result.add(copySubtask(subtask));
-            }
-        }
-        return result;
+        return epic.getSubtaskIds()
+                .stream()
+                .map(subtasks::get)
+                .filter(Objects::nonNull)
+                .map(this::copySubtask)
+                .toList();
     }
 
     protected void addLoadedTask(Task task) {
-        tasks.put(task.getId(), copyTask(task));
+        Task taskToSave = copyTask(task);
+        tasks.put(task.getId(), taskToSave);
+        addToPrioritizedTasks(taskToSave);
         updateIdCounterAfterLoading(task.getId());
     }
 
@@ -300,38 +335,42 @@ public class InMemoryTaskManager implements TaskManager {
             return;
         }
 
-        subtasks.put(subtask.getId(), copySubtask(subtask));
+        Subtask subtaskToSave = copySubtask(subtask);
+        subtasks.put(subtask.getId(), subtaskToSave);
         epic.addSubtaskId(subtask.getId());
-        updateEpicStatus(epic.getId());
+        addToPrioritizedTasks(subtaskToSave);
+        updateEpicFields(epic.getId());
         updateIdCounterAfterLoading(subtask.getId());
     }
 
     protected void updateEpicStatus(int epicId) {
+        updateEpicFields(epicId);
+    }
+
+    protected void updateEpicFields(int epicId) {
         Epic epic = epics.get(epicId);
-        if (epic == null || epic.getSubtaskIds().isEmpty()) {
-            if (epic != null) {
-                epic.setStatus(TaskStatus.NEW);
-            }
+        if (epic == null) {
             return;
         }
 
-        boolean allNew = true;
-        boolean allDone = true;
+        List<Subtask> epicSubtasks = epic.getSubtaskIds()
+                .stream()
+                .map(subtasks::get)
+                .filter(Objects::nonNull)
+                .toList();
 
-        for (Integer subtaskId : epic.getSubtaskIds()) {
-            Subtask subtask = subtasks.get(subtaskId);
-            if (subtask == null) {
-                continue;
-            }
-
-            TaskStatus status = subtask.getStatus();
-            if (status != TaskStatus.NEW) {
-                allNew = false;
-            }
-            if (status != TaskStatus.DONE) {
-                allDone = false;
-            }
+        if (epicSubtasks.isEmpty()) {
+            epic.setStatus(TaskStatus.NEW);
+            epic.setDuration(Duration.ZERO);
+            epic.setStartTime(null);
+            epic.setEndTime(null);
+            return;
         }
+
+        boolean allNew = epicSubtasks.stream()
+                .allMatch(subtask -> subtask.getStatus() == TaskStatus.NEW);
+        boolean allDone = epicSubtasks.stream()
+                .allMatch(subtask -> subtask.getStatus() == TaskStatus.DONE);
 
         if (allDone) {
             epic.setStatus(TaskStatus.DONE);
@@ -340,14 +379,35 @@ public class InMemoryTaskManager implements TaskManager {
         } else {
             epic.setStatus(TaskStatus.IN_PROGRESS);
         }
+
+        Duration duration = epicSubtasks.stream()
+                .map(Task::getDuration)
+                .filter(Objects::nonNull)
+                .reduce(Duration.ZERO, Duration::plus);
+        LocalDateTime startTime = epicSubtasks.stream()
+                .map(Task::getStartTime)
+                .filter(Objects::nonNull)
+                .min(LocalDateTime::compareTo)
+                .orElse(null);
+        LocalDateTime endTime = epicSubtasks.stream()
+                .map(Task::getEndTime)
+                .filter(Objects::nonNull)
+                .max(LocalDateTime::compareTo)
+                .orElse(null);
+
+        epic.setDuration(duration);
+        epic.setStartTime(startTime);
+        epic.setEndTime(endTime);
     }
 
     protected Task copyTask(Task task) {
-        return new Task(task.getId(), task.getTitle(), task.getDescription(), task.getStatus(), task.getType());
+        return new Task(task.getId(), task.getTitle(), task.getDescription(), task.getStatus(), task.getType(),
+                task.getDuration(), task.getStartTime());
     }
 
     protected Epic copyEpic(Epic epic) {
-        Epic copy = new Epic(epic.getId(), epic.getTitle(), epic.getDescription(), epic.getStatus());
+        Epic copy = new Epic(epic.getId(), epic.getTitle(), epic.getDescription(), epic.getStatus(),
+                epic.getDuration(), epic.getStartTime(), epic.getEndTime());
         for (Integer subtaskId : epic.getSubtaskIds()) {
             copy.addSubtaskId(subtaskId);
         }
@@ -356,7 +416,55 @@ public class InMemoryTaskManager implements TaskManager {
 
     protected Subtask copySubtask(Subtask subtask) {
         return new Subtask(subtask.getId(), subtask.getTitle(), subtask.getDescription(), subtask.getStatus(),
-                subtask.getEpicId());
+                subtask.getEpicId(), subtask.getDuration(), subtask.getStartTime());
+    }
+
+    protected Task copyTaskByType(Task task) {
+        if (task.getType() == TaskType.SUBTASK) {
+            return copySubtask((Subtask) task);
+        }
+
+        return copyTask(task);
+    }
+
+    protected boolean isTimeIntersecting(Task first, Task second) {
+        if (first == null || second == null || first.getStartTime() == null || second.getStartTime() == null) {
+            return false;
+        }
+        if (first.getEndTime() == null || second.getEndTime() == null) {
+            return false;
+        }
+
+        return first.getStartTime().isBefore(second.getEndTime())
+                && second.getStartTime().isBefore(first.getEndTime());
+    }
+
+    private void checkIntersection(Task task) {
+        if (task.getStartTime() == null) {
+            return;
+        }
+
+        boolean hasIntersection = prioritizedTasks.stream()
+                .filter(currentTask -> currentTask.getId() != task.getId())
+                .anyMatch(currentTask -> isTimeIntersecting(task, currentTask));
+
+        if (hasIntersection) {
+            throw new IllegalArgumentException(
+                    "Задача пересекается по времени с другой задачей"
+            );
+        }
+    }
+
+    private void addToPrioritizedTasks(Task task) {
+        if (task != null && task.getStartTime() != null) {
+            prioritizedTasks.add(task);
+        }
+    }
+
+    private void removeFromPrioritizedTasks(Task task) {
+        if (task != null && task.getStartTime() != null) {
+            prioritizedTasks.remove(task);
+        }
     }
 
     private int generateId() {
